# openclaw-notebooklm

./: .gitignore  CHANGELOG.md  GITHUB_SETUP.md  MANIFEST.in  PACKAGE_OVERVIEW.md  PACKAGE_SUMMARY.txt  PUBLISHING.md  QUICK_START.md  README.md  RELEASE_v0.1.1.md  pyproject.toml  test_install.sh
.github/: FUNDING.yml
src/openclaw_notebooklm/: __init__.py  installer.py
