[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-notebooklm"
version = "0.1.0"
description = "NotebookLM MCP integration for OpenClaw - Automated installer and skill manager"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "OpenClaw Community"}
]
keywords = ["openclaw", "notebooklm", "mcp", "ai", "skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/yourusername/openclaw-notebooklm"
Documentation = "https://github.com/yourusername/openclaw-notebooklm#readme"
Repository = "https://github.com/yourusername/openclaw-notebooklm.git"
Issues = "https://github.com/yourusername/openclaw-notebooklm/issues"

[project.scripts]
openclaw-notebooklm-install = "openclaw_notebooklm.installer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openclaw_notebooklm = ["templates/*"]
